--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
             style="@style/ShapeAppearanceOverlay.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/previousBtn"
             android:text="@string/previous" />
 
         <View
@@ -55,6 +56,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/nextBtn"
             android:text="@string/next" />
     </LinearLayout>
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
