--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,39 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:id="@+id/actionBtnLayout"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
+        <ImageView
+            android:layout_width="32dp"
+            android:id="@+id/updateBtn"
+            android:src="@drawable/ic_baseline_edit_248"
+            android:layout_height="32dp"
+            android:clickable="true"
+            android:contentDescription="Update product" />
+        <View
+            android:layout_width="20dp"
+            android:layout_height="1dp" />
+        <ImageView
+            android:layout_width="32dp"
+            android:id="@+id/deleteBtn"
+            android:clickable="true"
+            android:src="@drawable/ic_baseline_delete_248"
+            android:layout_height="32dp"
+            android:contentDescription="Delete product" />
+    </LinearLayout>
     <TextView
         android:id="@+id/txtProductId"
         android:text="@string/id"
+        android:layout_below="@id/actionBtnLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
