edit/add logic added

--- a/app/src/main/res/layout/activity_product_update.xml
+++ b/app/src/main/res/layout/activity_product_update.xml
@@ -19,6 +19,7 @@
         android:id="@+id/editTextProductPrice"
         android:layout_width="match_parent"
         android:layout_marginBottom="10dp"
+        android:inputType="numberDecimal"
         android:hint="@string/productFakePrice"
         android:layout_height="wrap_content"/>
 
